--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,15 @@
 body {
     font-family: 'Outfit', sans-serif;
 }
+
+@keyframes pulseGlow {
+
+    0%,
+    100% {
+        filter: drop-shadow(0 -20px 50px #fb923c);
+    }
+
+    50% {
+        filter: drop-shadow(0 -20px 70px #fb923c);
+    }
+}
